--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,64 @@
+# dependencies
 node_modules
+.pnp
+.pnp.js
 
-#Hardhat files
+# testing
+coverage
+lib-cov
+coverage.json
+
+# production
+build
+build/Release
+generated
 cache
 artifacts
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# environment variables
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+# logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# swap 
+*.sw[a-z]
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# optional npm cache directory
+.npm
+
+# yarn Integrity file
+.yarn-integrity
+
+# editor 
+.history
+.vscode
+
+# misc
+.DS_Store
+
+# subgraph
+subgraph.yaml
+packages/subgraph/src/types
 
 # no npm
 package-lock.json
