--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "subgraph-workshop",
+  "name": "erc20-example",
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "prettier": "^2.3.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.13"
+    "prettier-plugin-solidity": "^1.0.0-beta.10"
   },
   "resolutions": {
     "assemblyscript": "git+https://github.com/AssemblyScript/assemblyscript.git#v0.6"
