--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@subgraph-workshop/subgraph",
+  "name": "@erc20-example/subgraph",
   "version": "1.0.0",
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.1",
